# MPointers

./: CMakeLists.txt  README.md  main.cpp  mpointer
Estrutures/: Simple_list.h
MPointer/: MPointer.cpp  MPointer.h  MPointerGC.cpp  MPointerGC.h
Sort/: BubbleSort.h  InsertionSort.h  Partition.h  PrintSort.h  QuickSort.h  Swap.h
Structures/: Simple_list.cpp  Simple_list.h
